@@ -892,26 +892,30 @@
 	return TRUE;
 	}
 
-/******************************************************************************
- *                                                                            *
- * Comments: !!! Don't forget sync code with C !!!                            *
- *                                                                            *
- ******************************************************************************/
-	function delete_trends_by_itemid($itemids, $use_housekeeper=0){
-		zbx_value2array($itemids);
+	/**
+	 * Clear trends history for provided itemIDs or schedule this work for housekeeper
+	 *
+	 * @param mixed $itemIds IDs of items for which history should be cleared
+	 * @param bool $useHousekeeper schedule deletion for housekeeper instead of deleting now
+	 * @return bool
+	 */
+	function delete_trends_by_itemid($itemIds, $useHousekeeper = false){
+		zbx_value2array($itemIds);
 
-		if($use_housekeeper){
-			foreach($itemids as $id => $itemid){
+		if($useHousekeeper){
+			foreach($itemIds as $itemId){
 				$housekeeperid = get_dbid('housekeeper','housekeeperid');
 				DBexecute('INSERT INTO housekeeper (housekeeperid,tablename,field,value)'.
-					" VALUES ($housekeeperid, 'trends','itemid',$itemid)");
+					" VALUES ($housekeeperid,'trends','itemid',$itemId)");
 				$housekeeperid = get_dbid('housekeeper','housekeeperid');
 				DBexecute('INSERT INTO housekeeper (housekeeperid,tablename,field,value)'.
-					" VALUES ($housekeeperid, 'trends_uint','itemid',$itemid)");
+					" VALUES ($housekeeperid,'trends_uint','itemid',$itemId)");
 			}
-			return TRUE;
+			return true;
 		}
-	return	DBexecute('DELETE FROM trends WHERE '.DBcondition('itemid',$itemids));
+		$r1 = DBexecute('DELETE FROM trends WHERE '.DBcondition('itemid', $itemIds));
+		$r2 = DBexecute('DELETE FROM trends_uint WHERE '.DBcondition('itemid', $itemIds));
+		return $r1 && $r2;
 	}
 
 	function format_lastvalue($db_item){
